# research-crew

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  Research Agent Workflow Design.md  here.md  installed_packages.txt  pyproject.toml  reportgen_conda_env.yml  requirements.txt  roadmap.md  run.py  todo.md
.devcontainer/: Dockerfile  devcontainer.json
0src/: .env.example  Makefile_old  README.md  conda_env.yml  crew.py  main.ipynb
0src/outputs/: 1. enhanced_research_outline.md  2. research_plan.md  3. resources_summary.md  4. blog.md
config/: .secrets.example.toml  settings.toml
docs/: architecture.md
notebooks/: run_agent.ipynb  test-root-graph.ipynb
outputs/: 1. enhanced_research_outline.md  2. research_plan.md  3. resources_summary.md  4. blog.md
outputs/old/: 1. enhanced_research_outline.md  2. research_plan.md  blog.md  enhanced_research_outline.md  research_plan.md  research_results.md
reportgen_agent/config/: settings.py
reportgen_agent/core/: executor.py
reportgen_agent/core/graph/: __init__.py  content_anaysis_graph.py  pre_report_summarization_graph.py  root_graph.py
reportgen_agent/nodes/: content_analysis.py  content_retrieval.py  final_review.py  output_refinement.py  query_processing.py  report_generation.py  source_citation.py  web_search.py
reportgen_agent/utils/: helper_functions.py  storage_utils.py  web_fetcher.py
scripts/: get_folder_structure.py
src/: crew.py  main.ipynb
src/config/: agents.yaml  tasks.yaml
src/tools/: bulk_scrapper.py
tests/: test_query_processing.py  test_web_search.py
(+8 files in other folders)
