[tool.poetry]
name = "reportgen-agent"
version = "0.1.0"
description = ""
authors = ["Rômulo Drumond <rbp.drumond@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.2.1"
dynaconf = "^3.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
